Solved spacing issues in column 1

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -199,9 +194,12 @@ nav a{
 /*main-content*/
 #main-content2{
 	display:flex;
+	justify-content: space-between;
 	border-top:2px solid black;
 	border-bottom:2px solid black;
-	margin:3% 0%;
+	padding: 3% 0%;
+	margin: 3% 0%;
+	
 	
 }
 
@@ -209,7 +207,7 @@ nav a{
 .First{
  display:flex;
  flex-direction:column;
- justify-content: space-between;
+ margin-right:5%;
  		
 }
 
@@ -217,6 +215,7 @@ nav a{
 	border:1px solid black;
 	background:#DCDCDC;
 	padding:5%;
+	margin:5% 0%
 
 }
 
@@ -227,11 +226,15 @@ nav a{
 .Second{
 	display:flex;
 	flex-direction:column;
+	justify-content: space-evenly;
+	
+	
 }
 .Second div{
 	border:1px solid black;
 	background:#DCDCDC;
 	padding:5%;
+	margin:5% 0%
 
 
 }
@@ -265,3 +268,19 @@ nav a{
 
 /* Footer/*
 
+
+
+
+/* Footer/*
+© 2019 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
